...
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3350.recimeal.presentation.MainActivity">

    <ListView
        android:id="@+id/listRecipes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/searchRecipeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle">

        <EditText
            android:id="@+id/searchRecipeText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/search_field"
            android:ems="10"
            android:hint="@string/search_hint"
...
        android:paddingBottom="8dp"
        android:text="Favourites"
        app:layout_constraintStart_toEndOf="@+id/switchUser"
        app:layout_constraintTop_toBottomOf="@+id/filterText" />

    <Switch
        android:id="@+id/switchIng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="Ingredients"
...
